--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -1,16 +1,9 @@
 a {
   color: black;
-  text-decoration: none;
 }
 
 h1 {
-  color: #ba000d;
-}
-
-h2,
-h3 {
-  color: #f44336;
-  margin-bottom: 10px;
+  color: #263959;
 }
 
 p {
