--- a/src/components/tag/index.css
+++ b/src/components/tag/index.css
@@ -12,6 +12,7 @@
   font-weight: 800;
   font-size: 12px;
   margin-right: 5px;
+  font-family: "Merriweather Sans", sans-serif;
 }
 
 .tag_container:hover {
