--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -1,3 +1,25 @@
 a {
   color: black;
 }
+
+.author_header,
+.tag_header span,
+.tag_container,
+.link_container {
+  font-family: "Merriweather Sans", sans-serif;
+}
+
+.tag_header {
+  box-shadow: none;
+}
+
+.tag_header span {
+  font-size: 20px;
+  bottom: 0;
+  margin-right: 10px;
+  letter-spacing: -1px;
+}
+
+.tag_header span:hover {
+  opacity: 0.7;
+}
