--- a/src/components/footer/index.css
+++ b/src/components/footer/index.css
@@ -4,8 +4,11 @@
   width: 100%;
   text-align: center;
   font-size: 1em;
-  color: white;
   background-color: #2797ff;
   border-top: 18px white dashed;
   padding: 20px;
+}
+
+.footer_container a {
+  color: white;
 }
