--- a/src/components/footer/index.css
+++ b/src/components/footer/index.css
@@ -2,13 +2,14 @@
   position: relative;
   bottom: 0;
   width: 100%;
-  text-align: center;
-  font-size: 1em;
   background-color: #2797ff;
   border-top: 18px white dashed;
-  padding: 20px;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
 }
 
 .footer_container a {
+  margin-right: 10px;
   color: white;
 }
