--- a/src/components/header/index.css
+++ b/src/components/header/index.css
@@ -10,16 +10,24 @@
 
 .tag_header {
   box-shadow: none;
-  color: white;
 }
 
-.tag_header span {
+.theme_switch {
+  cursor: pointer;
+}
+
+.tag_header span,
+.theme_switch {
   font-size: 20px;
   bottom: 0;
   margin-right: 20px;
   letter-spacing: -1px;
+  color: white;
 }
 
 .tag_header span:hover {
+  opacity: 0.7;
+}
+.theme_switch:hover {
   opacity: 0.7;
 }
