--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,18 +1,19 @@
-.footer_container {
+.footer {
   position: relative;
   bottom: 0;
   width: 100%;
   background-color: #2797ff;
   border-top: 18px white dashed;
-  color: white;
   text-align: center;
   padding: 10px 20px;
   margin-top: 30px;
   display: flex;
   justify-content: space-between;
+  font-family: "Merriweather Sans", sans-serif;
+  letter-spacing: -1px;
 }
 
-.footer_container a {
+.footer a {
   margin-left: 10px;
   color: white;
 }
