--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -6,28 +6,27 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  color: white;
+  font-size: 20px;
+  font-family: "Merriweather Sans", sans-serif;
+  letter-spacing: -1px;
+  padding-right: 20px;
 }
 
-.tag_header {
-  box-shadow: none;
-}
-
-.theme_switch {
+.themeSwitch {
   cursor: pointer;
 }
 
-.tag_header span,
-.theme_switch {
-  font-size: 20px;
-  bottom: 0;
-  margin-right: 20px;
-  letter-spacing: -1px;
+.tag {
   color: white;
+  box-shadow: none;
+  margin-right: 10px;
 }
 
-.tag_header span:hover {
+.tag:hover,
+.themeSwitch:hover {
   opacity: 0.7;
 }
-.theme_switch:hover {
+/* .switch:hover {
   opacity: 0.7;
-}
+} */
