--- a/src/components/tag/tag.module.css
+++ b/src/components/tag/tag.module.css
@@ -1,27 +1,22 @@
-.tag_container {
+.container {
   all: unset;
   cursor: pointer;
   background-color: white;
   padding: 5px 5px;
-  width: 80px;
   text-align: center;
   border-radius: 5px;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
   border: 1px solid rgba(0, 0, 0, 0.2);
   text-transform: uppercase;
-  font-weight: 800;
   font-size: 12px;
   margin-right: 5px;
 }
 
-.tag_container:hover {
+.container:hover {
   color: black;
+  font-weight: 900;
 }
 
-.tag_container:active {
-  transform: scale(0.96);
-}
-
-.tag_link {
+.link {
   all: unset;
 }
