--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -2,8 +2,8 @@
   position: relative;
   bottom: 0;
   width: 100%;
-  background-color: #2797ff;
-  border-top: 18px white dashed;
+  background-color: var(--main-color);
+  border-top: 18px var(--bg) dashed;
   text-align: center;
   padding: 10px 20px;
   margin-top: 30px;
@@ -15,5 +15,5 @@
 
 .footer a {
   margin-left: 10px;
-  color: white;
+  color: var(--header-font-color);
 }
