--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,12 +1,12 @@
 .header {
   height: 70px;
   width: 100%;
-  background-color: #2797ff;
-  border-bottom: 18px white dashed;
+  background-color: var(--main-color);
+  border-bottom: 18px var(--bg) dashed;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  color: white;
+  color: var(--header-font-color);
   font-size: 20px;
   font-family: "Merriweather Sans", sans-serif;
   letter-spacing: -1px;
@@ -18,7 +18,7 @@
 }
 
 .tag {
-  color: white;
+  color: var(--header-font-color);
   box-shadow: none;
   margin-right: 10px;
 }
