--- a/src/components/tag/tag.module.css
+++ b/src/components/tag/tag.module.css
@@ -1,20 +1,21 @@
 .container {
   all: unset;
   cursor: pointer;
-  background-color: white;
+  background-color: var(--bg);
   padding: 5px 5px;
   text-align: center;
   border-radius: 5px;
-  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: var(--box-shadow);
+  border: 1px solid var(--border-color);
   text-transform: uppercase;
   font-size: 12px;
   margin-right: 5px;
+  color: var(--text-color);
 }
 
 .container:hover {
-  color: black;
   font-weight: 900;
+  border: none;
 }
 
 .link {
