Post blog-making-story

--- a/src/utils/global.css
+++ b/src/utils/global.css
@@ -43,7 +43,10 @@ h5 {
 }
 
 a {
-  color: var(--main-color);
+  color: var(--title-color);
+}
+img {
+  margin-bottom: 20px;
 }
 
 .gatsby-resp-image-wrapper a {
